--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div>
             <h2>Better-Dressed People</h2>
         </div>
-        <nav aria-label="Main Navigation" role="navigation">
+        <nav aria-label="Main Navigation" role="navigation" class="top-nav">
             <ul>
                 <li><a href="https://www.google.com">Women's</a></li>
                 <li><a href="https://www.google.com">Men's</a></li>
@@ -35,13 +35,15 @@
                     <h2>On the Street in Brooklyn</h2>    
                 </div>
                 <div>
-                    <img src="/assets/blog-image-1.jpeg" alt="lady in red" />
+                    <img src="/assets/blog-image-1.jpeg" alt="lady in red" class="images"/>
                 </div>
                 <div>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis exercitationem amet soluta id minima, quis fugiat deserunt deleniti rem, dolorum dolorem error sit consequatur possimus hic est! Labore, sunt aliquam!
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis exercitationem amet soluta id minima, quis fugiat deserunt deleniti rem, dolorum dolorem error sit consequatur possimus hic est! Labore, sunt aliquam! Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt
+                        ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat.
                     </p>
                 </div>
+                <a href="" class="continue">Continues...</a>
             </article>
 
             <article>
@@ -50,20 +52,22 @@
                     <h2>Vintage in Vogue</h2>    
                 </div>
                 <div>
-                    <img src="assets/blog-image-2.jpeg" alt="hamilton" />
+                    <img src="assets/blog-image-2.jpeg" alt="hamilton" class="images"/>
                 </div>
                 <div>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis exercitationem amet soluta id minima, quis fugiat deserunt deleniti rem, dolorum dolorem error sit consequatur possimus hic est! Labore, sunt aliquam!
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis exercitationem amet soluta id minima, quis fugiat deserunt deleniti rem, dolorum dolorem error sit consequatur possimus hic est! Labore, sunt aliquam! Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt
+                        ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat.
                     </p>
                 </div>
+                <a href="" class="continue">Continues...</a>
             </article>
         </section>
 
     </main>
 
     <footer>
-        <nav aria-label="Main Navigation" role="navigation">
+        <nav aria-label="Main Navigation" role="navigation" class="bottom-nav">
             <ul>
                 <li><a href="https://www.google.com">Home</a></li>
                 <li><a href="https://www.google.com">Women's</a></li>
@@ -75,7 +79,7 @@
                 <li><a href="https://www.google.com">Tips</a></li>
             </ul>
         </nav>
-        <div>
+        <div class="copyright">
             &copy; 2013 Valet Industries, Inc
         </div>
     </footer>
